--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -7,4 +7,10 @@
         text="Click me!"
         press=".onShowHello"
     />
+    <Input
+        value="{/recipient/name}"
+        description="Hello {/recipient/name}"
+        valueLiveUpdate="true"
+        width="50%"
+    />
 </mvc:View>
