--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -4,7 +4,7 @@
     xmlns:mvc="sap.ui.core.mvc"
 >
     <Button
-        text="Click me!"
+        text="{i18n>showHelloButtonText}"
         press=".onShowHello"
     />
     <Input
