--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -2,15 +2,28 @@
     controllerName="ui5.walkthrough.controller.App"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc"
+    displayBlock="true"
 >
-    <Button
-        text="{i18n>showHelloButtonText}"
-        press=".onShowHello"
-    />
-    <Input
-        value="{/recipient/name}"
-        description="Hello {/recipient/name}"
-        valueLiveUpdate="true"
-        width="50%"
-    />
+    <App>
+        <pages>
+            <Page title="{i18n>homePageTitle}">
+                <content>
+                    <Panel headerText="{i18n>helloPanelTitle}">
+                        <content>
+                            <Button
+                                text="{i18n>showHelloButtonText}"
+                                press=".onShowHello"
+                            />
+                            <Input
+                                value="{/recipient/name}"
+                                description="Hello {/recipient/name}"
+                                valueLiveUpdate="true"
+                                width="50%"
+                            />
+                        </content>
+                    </Panel>
+                </content>
+            </Page>
+        </pages>
+    </App>
 </mvc:View>
