Step 14: Custom CSS

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -5,7 +5,7 @@
     displayBlock="true"
 >
     <Shell>
-        <App>
+        <App class="myAppStyle">
             <pages>
                 <Page title="{i18n>homePageTitle}">
                     <content>
@@ -18,16 +18,16 @@
                                 <Button
                                     text="{i18n>showHelloButtonText}"
                                     press=".onShowHello"
-                                    class="sapUiSmallMarginEnd"
+                                    class="myButtonStyle"
                                 />
                                 <Input
                                     value="{/recipient/name}"
                                     valueLiveUpdate="true"
                                     width="50%"
                                 />
-                                <Text
-                                    text="Hello {/recipient/name}"
-                                    class="sapUiSmallMargin"
+                                <FormattedText
+                                    htmlText="Hello {/recipient/name}"
+                                    class="sapUiSmallMargin sapThemeGlighlight-asColor myFormattedText"
                                 />
                             </content>
                         </Panel>
