--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -9,28 +9,9 @@
             <pages>
                 <Page title="{i18n>homePageTitle}">
                     <content>
-                        <Panel
-                            headerText="{i18n>helloPanelTitle}"
-                            class="sapUiResponsiveMargin"
-                            width="auto"
-                        >
-                            <content>
-                                <Button
-                                    text="{i18n>showHelloButtonText}"
-                                    press=".onShowHello"
-                                    class="myButtonStyle"
-                                />
-                                <Input
-                                    value="{/recipient/name}"
-                                    valueLiveUpdate="true"
-                                    width="50%"
-                                />
-                                <FormattedText
-                                    htmlText="Hello {/recipient/name}"
-                                    class="sapUiSmallMargin sapThemeGlighlight-asColor myFormattedText"
-                                />
-                            </content>
-                        </Panel>
+                        <mvc:XMLView
+                            viewName="ui5.walkthrough.view.HelloPanel"
+                        />
                     </content>
                 </Page>
             </pages>
