--- a/webapp/view/Hellopanel.view.xml
+++ b/webapp/view/Hellopanel.view.xml
@@ -14,6 +14,7 @@
                 text="{i18n>openDialogButtonText}"
                 press=".onOpenDialog"
                 class="sapUiSmallMarginEnd"
+                icon="sap-icon://world"
             />
             <Button
                 text="{i18n>showHelloButtonText}"
