--- a/webapp/view/HelloDialog.fragment.xml
+++ b/webapp/view/HelloDialog.fragment.xml
@@ -6,6 +6,13 @@
         id="helloDialog"
         title="Hello {/recipient/name}"
     >
+        <content>
+            <core:Icon
+                src="sap-icon://attachment"
+                size="6rem"
+                class="sapUiMediumMargin"
+            />
+        </content>
         <beginButton>
             <Button
                 text="{i18n>dialogCloseButtonText}"
