--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -39,6 +39,8 @@
                 }"
                 numberUnit="{view>/currency}"
                 numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : (${invoice>ExtendedPrice} > 30 ? 'Warning' : 'Success') }"
+                type="Navigation"
+                press=".onPress"
             >
                 <firstStatus>
                     <ObjectStatus
