Step 33: Custom control

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -8,3 +8,11 @@ html[dir='rtl'] .myAppStyle .myButtonStyle.sapMBtn {
   display: inline-block;
   font-weight: bold;
 }
+
+/*  ProductRating */
+.myAppProductRating {
+  padding: 0.75rem;
+}
+.myAppProductRating .sapMRI {
+  vertical-align: initial;
+}
