--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -4,7 +4,7 @@
     xmlns:core="sap.ui.core"
     xmlns:mvc="sap.ui.core.mvc"
 >
-    <List
+    <Table
         headerText="{i18n>invoiceListTitle}"
         class="sapUiResponsiveMargin"
         width="auto"
@@ -26,8 +26,80 @@
                 />
             </Toolbar>
         </headerToolbar>
+        <columns>
+            <Column
+                hAlign="End"
+                minScreenWidth="Small"
+                demandPopin="true"
+                width="5em"
+            >
+                <Text text="{i18n>columnQuantity}" />
+            </Column>
+            <Column>
+                <Text text="{i18n>columnName}" />
+            </Column>
+            <Column
+                minScreenWidth="Small"
+                demandPopin="true"
+            >
+                <Text text="{i18n>columnStatus}" />
+            </Column>
+            <Column
+                minScreenWidth="Tablet"
+                demandPopin="false"
+            >
+                <Text text="{i18n>columnSupplier}" />
+            </Column>
+            <Column hAlign="End">
+                <Text text="{i18n>columnPrice}" />
+            </Column>
+        </columns>
         <items>
-            <ObjectListItem
+            <ColumnListItem
+                type="Navigation"
+                press=".onPress"
+            >
+                <cells>
+                    <ObjectNumber
+                        number="{invoice>Quantity}"
+                        emphasized="false"
+                    />
+                    <ObjectIdentifier title="{invoice>ProductName}" />
+                    <Text
+                        core:require="{
+                    Formatter: 'ui5/walkthrough/model/formatter'
+                }"
+                        text="{
+                        parts: [
+                            'invoice>Status',
+                            'i18n>invoiceStatusA',
+                            'i18n>invoiceStatusB',
+                            'i18n>invoiceStatusC'
+                        ],
+                        formatter: 'Formatter.statusText.bind($controller)'
+                    }"
+                    />
+                    <Text text="{invoice>ShipperName}" />
+                    <ObjectNumber
+                        core:require="{
+                            Currency: 'sap/ui/model/type/Currency'
+                        }"
+                        number="{
+                            parts: [
+                                'invoice>ExtendedPrice',
+                                'view>currency'
+                            ],
+                            type: 'Currency',
+                            formatOptions: {
+                                showMeasure: false
+                            }
+                        }"
+                        unit="{view>currency}"
+                        state="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : (${invoice>ExtendedPrice} >= 10 ? 'Warning' : 'Success') }"
+                    />
+                </cells>
+            </ColumnListItem>
+            <!--     <ObjectListItem
                 core:require="{
                     Currency: 'sap/ui/model/type/Currency'
                 }"
@@ -53,7 +125,7 @@
                     }"
                     />
                 </firstStatus>
-            </ObjectListItem>
+            </ObjectListItem> -->
         </items>
-    </List>
+    </Table>
 </mvc:View>
