Step 35: Device adaptation

--- a/webapp/view/Hellopanel.view.xml
+++ b/webapp/view/Hellopanel.view.xml
@@ -7,13 +7,15 @@
         headerText="{i18n>helloPanelTitle}"
         class="sapUiResponsiveMargin"
         width="auto"
+        expandable="{device>/system/phone}"
+        expanded="{= !${device>/system/phone}}"
     >
         <content>
             <Button
                 id="helloDialogButton"
                 text="{i18n>openDialogButtonText}"
                 press=".onOpenDialog"
-                class="sapUiSmallMarginEnd"
+                class="sapUiSmallMarginEnd sapUiVisibleOnlyOnDesktop"
                 icon="sap-icon://world"
             />
             <Button
