--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -4,18 +4,7 @@
     xmlns:core="sap.ui.core"
     xmlns:mvc="sap.ui.core.mvc"
 >
-    <Table
-        headerText="{i18n>invoiceListTitle}"
-        class="sapUiResponsiveMargin"
-        width="auto"
-        items="{
-        path: 'invoice>/Invoices', 
-        sorter: {
-            path:'ShipperName',
-            group : true
-            }
-        }"
-    >
+    <Panel accessibleRole="Region">
         <headerToolbar>
             <Toolbar>
                 <Title text="{i18n>invoiceListTitle}" />
@@ -26,50 +15,62 @@
                 />
             </Toolbar>
         </headerToolbar>
-        <columns>
-            <Column
-                hAlign="End"
-                minScreenWidth="Small"
-                demandPopin="true"
-                width="5em"
-            >
-                <Text text="{i18n>columnQuantity}" />
-            </Column>
-            <Column>
-                <Text text="{i18n>columnName}" />
-            </Column>
-            <Column
-                minScreenWidth="Small"
-                demandPopin="true"
-            >
-                <Text text="{i18n>columnStatus}" />
-            </Column>
-            <Column
-                minScreenWidth="Tablet"
-                demandPopin="false"
-            >
-                <Text text="{i18n>columnSupplier}" />
-            </Column>
-            <Column hAlign="End">
-                <Text text="{i18n>columnPrice}" />
-            </Column>
-        </columns>
-        <items>
-            <ColumnListItem
-                type="Navigation"
-                press=".onPress"
-            >
-                <cells>
-                    <ObjectNumber
-                        number="{invoice>Quantity}"
-                        emphasized="false"
-                    />
-                    <ObjectIdentifier title="{invoice>ProductName}" />
-                    <Text
-                        core:require="{
+        <Table
+            headerText="{i18n>invoiceListTitle}"
+            class="sapUiResponsiveMargin"
+            width="auto"
+            items="{
+        path: 'invoice>/Invoices', 
+        sorter: {
+            path:'ShipperName',
+            group : true
+            }
+        }"
+        >
+            <columns>
+                <Column
+                    hAlign="End"
+                    minScreenWidth="Small"
+                    demandPopin="true"
+                    width="5em"
+                >
+                    <Text text="{i18n>columnQuantity}" />
+                </Column>
+                <Column>
+                    <Text text="{i18n>columnName}" />
+                </Column>
+                <Column
+                    minScreenWidth="Small"
+                    demandPopin="true"
+                >
+                    <Text text="{i18n>columnStatus}" />
+                </Column>
+                <Column
+                    minScreenWidth="Tablet"
+                    demandPopin="false"
+                >
+                    <Text text="{i18n>columnSupplier}" />
+                </Column>
+                <Column hAlign="End">
+                    <Text text="{i18n>columnPrice}" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem
+                    type="Navigation"
+                    press=".onPress"
+                >
+                    <cells>
+                        <ObjectNumber
+                            number="{invoice>Quantity}"
+                            emphasized="false"
+                        />
+                        <ObjectIdentifier title="{invoice>ProductName}" />
+                        <Text
+                            core:require="{
                     Formatter: 'ui5/walkthrough/model/formatter'
                 }"
-                        text="{
+                            text="{
                         parts: [
                             'invoice>Status',
                             'i18n>invoiceStatusA',
@@ -78,13 +79,13 @@
                         ],
                         formatter: 'Formatter.statusText.bind($controller)'
                     }"
-                    />
-                    <Text text="{invoice>ShipperName}" />
-                    <ObjectNumber
-                        core:require="{
+                        />
+                        <Text text="{invoice>ShipperName}" />
+                        <ObjectNumber
+                            core:require="{
                             Currency: 'sap/ui/model/type/Currency'
                         }"
-                        number="{
+                            number="{
                             parts: [
                                 'invoice>ExtendedPrice',
                                 'view>currency'
@@ -94,12 +95,12 @@
                                 showMeasure: false
                             }
                         }"
-                        unit="{view>currency}"
-                        state="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : (${invoice>ExtendedPrice} >= 10 ? 'Warning' : 'Success') }"
-                    />
-                </cells>
-            </ColumnListItem>
-            <!--     <ObjectListItem
+                            unit="{view>currency}"
+                            state="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : (${invoice>ExtendedPrice} >= 10 ? 'Warning' : 'Success') }"
+                        />
+                    </cells>
+                </ColumnListItem>
+                <!--     <ObjectListItem
                 core:require="{
                     Currency: 'sap/ui/model/type/Currency'
                 }"
@@ -126,6 +127,7 @@
                     />
                 </firstStatus>
             </ObjectListItem> -->
-        </items>
-    </Table>
+            </items>
+        </Table>
+    </Panel>
 </mvc:View>
